fix: use removeAll on the parameter list instead